fix parsing errors

--- a/investigate/querying/metrics/metrics-catalog.mdx
+++ b/investigate/querying/metrics/metrics-catalog.mdx
@@ -110,7 +110,7 @@ Click the **View labels** button to open the **Labels** tab of the metric's pane
 The table in this tab provides the following information about your metric's labels:
 
 - **Label**: The label name associated with the metric. To copy the label name,
-  hover the cursor over the label's row and click the <Icon path={{mdiContentCopy}} />
+  hover the cursor over the label's row and click the <Icon icon="copy" />
   copy icon.
 - **Cardinality**: The number of unique values associated with the label.
 - **Values**: The label values. Click **Show all** to expand the list to display
