--- a/observe/dashboards/panels/table.mdx
+++ b/observe/dashboards/panels/table.mdx
@@ -64,7 +64,7 @@ table.
 
 You can export a table's values as a CSV file.
 
-1. In the panel, click the <Icon path= { mdiDotsVertical } /> icon.
+1. In the panel, click the <Icon icon="ellipsis-vertical" /> icon.
 2. Select **Export CSV**.
 
 ## Configure a table
@@ -133,11 +133,11 @@ To create a new threshold:
 
 1. Edit a table panel.
 1. Click the **Settings** tab.
-1. In the **Thresholds** section, click the <Icon path = { mdiPlus} /> plus icon.
+1. In the **Thresholds** section, click the <Icon icon="plus" /> plus icon.
 1. Enter a value in the **When value is >=** text box.
 1. Use the color box to select a color for the threshold.
 1. Optional: Click (**>**) to expand a row and update the **Message** field.
-1. Click the <Icon path = { mdiPlus} /> plus icon to add more threshold levels.
+1. Click the <Icon icon="plus" /> plus icon to add more threshold levels.
 1. When finished, click **Apply**.
 
 After applying the changes, the table updates with the selected color highlighting
