--- a/observe/dashboards/panels/time-series-chart.mdx
+++ b/observe/dashboards/panels/time-series-chart.mdx
@@ -78,7 +78,7 @@ You can add an annotation when a specific time is pinned. To do so:
    default pair is includes the **Key** `user_email` and the **Value** field
    populates with the signed in user's email address.
 1. To add additional labels, click **+ Add Label**.
-1. To delete a label, click the <Icon path= {mdiTrashCan} /> trash can.
+1. To delete a label, click the <Icon icon="trash" /> trash can.
 1. When finished, click **Add Event**.
 
 ## Time series chart queries
