--- a/ingest/metrics-traces/collector/mappings/datadog/dogstatsd.mdx
+++ b/ingest/metrics-traces/collector/mappings/datadog/dogstatsd.mdx
@@ -257,17 +257,21 @@ differences:
 
 DataDog displaying 2-hour deltas for the past 7 days:
 
+<Frame>
 <img src="/public/doc-assets/2-hour-increase-7-days.png" alt="DataDog displaying 2-hour deltas for the past 7 days" />
+</Frame>
 
 Observability Platform displaying 10-min counter increases for the past 7 days (values are smaller):
 
-<img src="/public/doc-assets/OP-10-min-counter-7-days.png" alt="Observability Platform
-displaying 10-min counter increases for the past 7 days" />
+<Frame>
+<img src="/public/doc-assets/OP-10-min-counter-7-days.png" alt="Observability Platform displaying 10-min counter increases for the past 7 days" />
+</Frame>
 
 Same metric with a 2-hour counter increase for the past 7 days:
 
-<img src="/public/doc-assets/2-hour-increase-7-days.png" alt="Same metric with a 2-hour
-counter increase for the past 7 days" />
+<Frame>
+<img src="/public/doc-assets/2-hour-increase-7-days.png" alt="Same metric with a 2-hour counter increase for the past 7 days" />
+</Frame>
 
 ### Set the Min step
 
