--- a/investigate/alerts/alert-details.mdx
+++ b/investigate/alerts/alert-details.mdx
@@ -33,10 +33,10 @@ The page designates the alert's status with an icon, text, and color:
 
 | Icon | Text | Description |
 | ---- | ---- |------------ |
-| <Icon icon="hexagon-exclamation" color="#ee6c6cff"/> | **Critical** | Actively triggered alert that exceeds the defined critical conditions. |
-| <Icon icon="circle-exclamation" color="#ffb249ff"/>    | **Warning**  | Actively triggered alert that exceeds the defined warning conditions.  |
-| <Icon icon="bell-slash" color="c1a6f8ff"/>   | **Muted**    | Alert that's muted by an active muting rule.                           |
-| <Icon icon="circle-check" color="#59cc8dff"/>    | **Passing**  | An alert that's no longer triggered.                                   |
+| <Icon iconType="solid" icon="hexagon-exclamation" color="#ee6c6cff"/> | **Critical** | Actively triggered alert that exceeds the defined critical conditions. |
+| <Icon iconType="solid" icon="circle-exclamation" color="#ffb249ff"/>    | **Warning**  | Actively triggered alert that exceeds the defined warning conditions.  |
+| <Icon iconType="solid" icon="bell-slash" color="c1a6f8ff"/>   | **Muted**    | Alert that's muted by an active muting rule.                           |
+| <Icon iconType="solid" icon="circle-check" color="#59cc8dff"/>    | **Passing**  | An alert that's no longer triggered.                                   |
 
 The page also lists any triggering **[Signal](/investigate/alerts/notifications/signals)** as chips
 that identify its keys and their values.
