--- a/investigate/alerts/alert-details/alert-patterns.mdx
+++ b/investigate/alerts/alert-details/alert-patterns.mdx
@@ -98,9 +98,9 @@ source and includes columns for the alert's:
 
   | Icon | Text | Description |
   | ---- | ---- |------------ |
-  | <Icon icon="hexagon-exclamation" color="#ee6c6cff"/> | **Critical** | Actively triggered alert that exceeds the defined critical conditions. |
-  | <Icon icon="circle-exclamation" color="#ffb249ff"/>    | **Warning**  | Actively triggered alert that exceeds the defined warning conditions.  |
-  | <Icon icon="bell-slash" color="#c1a6f8ff"/>   | **Muted**    | Alert that's muted by an active muting rule.                           |
+  | <Icon iconType="solid" icon="hexagon-exclamation" color="#ee6c6cff"/> | **Critical** | Actively triggered alert that exceeds the defined critical conditions. |
+  | <Icon iconType="solid" icon="circle-exclamation" color="#ffb249ff"/>    | **Warning**  | Actively triggered alert that exceeds the defined warning conditions.  |
+  | <Icon iconType="solid" icon="bell-slash" color="#c1a6f8ff"/>   | **Muted**    | Alert that's muted by an active muting rule.                           |
 - Name (**Alert**), as a link to the alert's details page
 - **Alert state, such as **active** or **triggered**
 - **Alert ID**
