--- a/investigate/alerts/alerts-list.mdx
+++ b/investigate/alerts/alerts-list.mdx
@@ -25,10 +25,11 @@ Each listed alert includes several columns of information:
 
   | Icon | Text | Description |
   | ---- | ---- | ----------- |
-  | <Icon icon="hexagon-exclamation" color="#ee6c6cff"/>      | **Critical** | Actively triggered alert that exceeds the defined critical conditions. |
-  | <Icon icon="triangle-exclamation" color="#ffb249ff"/>               | **Warning**  | Actively triggered alert that exceeds the defined warning conditions.  |
-  | <Icon icon="circle-info" color="#a6bff8ff"/> | **Muted**    | Alert that's muted by an active muting rule.                           |
-  | <Icon icon="circle-check" color="#59cc8dff"/>         | **Resolved**  | A resolved alert.                                                      |
+  | <Icon iconType="solid" icon="hexagon-exclamation" color="#ee6c6cff"/>      | **Critical** | Actively triggered alert that exceeds the defined critical conditions. |
+  | <Icon iconType="solid" icon="triangle-exclamation" color="#ffb249ff"/>               | **Warning**  | Actively triggered alert that exceeds the defined warning conditions.  |
+  | <Icon iconType="solid" icon="circle-info" color="#a6bff8ff"/> | **Muted**    | Alert that's muted by an active muting rule.                           |
+  | <Icon iconType="solid" icon="circle-check" color="#59cc8dff"/>         | **Resolved**  | A resolved alert.                                                      |
+
 - Its title (**Alert**), as a link to its [alert details](/investigate/alerts/alert-details) page
 - The duration that the alert has been **Alerting for**
 - The **Configuration entity** related to the alert, as a link to the associated
