--- a/investigate/alerts/monitors.mdx
+++ b/investigate/alerts/monitors.mdx
@@ -37,10 +37,10 @@ The list of monitors displays the status for each monitor next to its title:
 
 | Icon | Description |
 | ---- | ----------- |
-| <Icon icon="hexagon-exclamation" color="#ee6c6cff"/> | Currently alerting monitor that exceeds the defined critical conditions. |
-| <Icon icon="circle-exclamation" color="#ffb249ff"/>    | Currently alerting monitor that exceeds the defined warning conditions.  |
-| <Icon icon="bell-slash" color="#c1a6f8ff" />   | Monitor that's currently muted by an active muting rule.                 |
-| <Icon icon="circle-check" color="#59cc8dff"/>    | Passing monitor that's not generating alerts.                            |
+| <Icon iconType="solid" icon="hexagon-exclamation" color="#ee6c6cff"/> | Currently alerting monitor that exceeds the defined critical conditions. |
+| <Icon iconType="solid" icon="circle-exclamation" color="#ffb249ff"/>    | Currently alerting monitor that exceeds the defined warning conditions.  |
+| <Icon iconType="solid" icon="bell-slash" color="#c1a6f8ff" />   | Monitor that's currently muted by an active muting rule.                 |
+| <Icon iconType="solid" icon="circle-check" color="#59cc8dff"/>    | Passing monitor that's not generating alerts.                            |
 
 Use the following methods to filter your monitors:
 
