--- a/navigate.mdx
+++ b/navigate.mdx
@@ -103,7 +103,9 @@ team or collection.
 1. Click a dashboard, service, or SLO from the table.
 1. Click the dashboard or service name to display the header overview.
 
-   <img src="/public/doc-assets/header-nav.png" alt="Select the name to display header nav" width="500" />
+    <Frame>
+    <img src="/public/doc-assets/header-nav.png" alt="Select the name to display header nav" width="500" />
+    </Frame>
 
 You can click the team, service, or collection name to go to its overview page.
 
