--- a/observe/dashboards/customization/dashboard-variables.mdx
+++ b/observe/dashboards/customization/dashboard-variables.mdx
@@ -223,7 +223,7 @@ different settings, while using the same panels.
 If you have saved custom dashboard variables, the **Saved View** menu displays. The menu
 is a list of all the views available for this dashboard. Select a view from the
 **Saved View** menu to display a different view. The currently selected view has a
-<Icon icon="check" color="#60E684"/> green checkmark next to the name.
+<Icon iconType="solid" icon="check" color="#60E684"/> green checkmark next to the name.
 
 Each available variable displays after the view name, in the order
 [they're defined](/observe/dashboards/customization/dashboard-variables#define-the-order-of-dashboard-variables).
