--- a/tooling/infrastructure/pulumi.mdx
+++ b/tooling/infrastructure/pulumi.mdx
@@ -3,6 +3,9 @@ title: Chronosphere Pulumi provider
 'og:description': Use the Chronosphere Pulumi provider to create and manage Chronosphere Observability Platform resources.
 sidebarTitle: Pulumi provider
 ---
+
+import { CSharpIcon } from '/snippets/Icons.jsx';
+
 {/* -- dri: Adam Locke -- */}
 
 
@@ -47,7 +50,7 @@ preferred language.
   href="https://pkg.go.dev/github.com/chronosphereio/pulumi-chronosphere/sdk" />
   <Card horizontal icon="js" title="JavaScript"
   href="https://www.npmjs.com/package/@pulumi-chronosphere/pulumi-chronosphere" />
-  <Card horizontal icon="c" title=".NET" href="https://www.nuget.org/packages/Chronosphere.Pulumi.Chronosphere" />
+  <Card horizontal icon={<CSharpIcon/>} title=".NET" href="https://www.nuget.org/packages/Chronosphere.Pulumi.Chronosphere" />
   <Card horizontal icon="python" title="Python" href="https://pypi.org/project/pulumi-chronosphere/" />
 </Columns>
 
