--- a/navigate/notebooks.mdx
+++ b/navigate/notebooks.mdx
@@ -21,8 +21,7 @@ Your notebook isn't visible to other users.
 
 Your notebook is visible anywhere in Observability Platform.
 
-To open your notebook, click the **Notebook** <img src="/public/doc-assets/notebook.png"
-alt="Notebook icon" /> icon in the right sidebar, or use the keyboard shortcut
+To open your notebook, click the **Notebook** <img src="/public/doc-assets/notebook.png" className="inline-flex my-0" alt="Notebook icon" /> icon in the right sidebar, or use the keyboard shortcut
 `Command+I` (on macOS).
 
 ## Add items to your notebook
