--- a/pipeline-navigate.mdx
+++ b/pipeline-navigate.mdx
@@ -1,7 +1,7 @@
 ---
 title: Navigate the Telemetry Pipeline web interface
 'og:description': Learn how to navigate the Chronosphere Telemetry Pipeline web interface.
-sidebarTitle: Overview
+sidebarTitle: Navigate
 ---
 {/* -- dri: Alexa Kreizinger -- */}
 
