--- a/pipelines.mdx
+++ b/pipelines.mdx
@@ -3,6 +3,7 @@ title: Chronosphere Telemetry Pipeline
 'og:description': Learn about Chronosphere Telemetry Pipeline.
 ---
 import { PipelineOverviewImage } from '/snippets/PipelineOverviewImage.jsx';
+import { PipeIcon } from '/snippets/Icons.jsx';
 
 {/* -- dri: Alexa Kreizinger --*/}
 
@@ -65,13 +66,13 @@ your observability data.
 {/* markdownlint-disable MD013 */}
 
  <Columns cols={1}>
-  <Card horizontal icon="wrench" title="Install - Set up Telemetry Pipeline in Linux and Kubernetes" href="/pipeline-install" />
-  <Card horizontal icon="pipe" title="Create and modify pipelines - Deploy custom pipelines to collect and disseminate data" href="/pipeline-data/create-modify" />
+  <Card horizontal icon="screwdriver-wrench" title="Install - Set up Telemetry Pipeline in Linux and Kubernetes" href="/pipeline-install" />
+  <Card horizontal icon={<PipeIcon/>} title="Create and modify pipelines - Deploy custom pipelines to collect and disseminate data" href="/pipeline-data/create-modify" />
   <Card horizontal icon="folder-tree" title="Configure - Customize Telemetry Pipeline behavior" href="/pipeline-configure" />
   <Card horizontal icon="filters" title="Processing rules - Enrich, reduce, and transform data" href="/pipeline-data/processing-rules" />
   <Card horizontal icon="earth" title="Plugins - Route telemetry data from source to destination" href="/pipeline-data/plugins" />
   <Card horizontal icon="paper-plane" title="Fleets - Create collections of distributed telemetry agents" href="/fleets" />
-  <Card horizontal icon="terminal" title="Pipeline CLI - Manage pipelines through a command-line interface" href="pipeline-cli" />
+  <Card horizontal icon="rectangle-terminal" title="Pipeline CLI - Manage pipelines through a command-line interface" href="pipeline-cli" />
 </Columns>
 
 {/* markdownlint-enable MD013 */}
